# lsl-recording-toolbox

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
.config/: cross.toml
.github/workflows/: build.yml
.serena/: project.yml
examples/: basic_recording_demo.rs  inspect_hdf5_metadata.py  inspect_metadata.rs  inspection_demo.rs  lsl-inspect.py  merge_hdf5.rs  merge_workflow_demo.rs  multi_recorder.py  multi_recorder.rs  sync_multi_recorder.rs  sync_validator.rs  validation_demo.rs
examples/unix/: inspect_demo.sh  multi_recorder_demo.sh  sync_demo.sh
examples/windows/: inspect_demo.bat  multi_recorder_demo.bat  sync_demo.bat
src/: cli.rs  commands.rs  lib.rs  lsl.rs  main.rs  merger.rs  sync.rs
src/hdf5/: mod.rs  writer.rs
src/tui/: app.rs  events.rs  file_browser.rs  form.rs  mod.rs  process.rs  tab.rs  tool_config.rs  ui.rs  ui_dialog.rs  ui_file_browser.rs  ui_form.rs  ui_helpers.rs  ui_tabs.rs
src/zarr/: mod.rs  writer.rs
tests/: irregular_streams_test.rs
