[package]
name = "lsl-recorder"
version = "0.1.0"
edition = "2021"

[dependencies]
lsl = {git = "https://github.com/labstreaminglayer/liblsl-rust.git", rev = "afa1d251674591c11ebc06070de60914b6dafccf"}
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
tempfile = "3.0"
ndarray = "0.15"
hdf5 = { git = "https://github.com/aldanor/hdf5-rust", branch = "master" }
hdf5-sys = { git = "https://github.com/aldanor/hdf5-rust", branch = "master" }
fastrand = "2.0"
chrono = { version = "0.4", features = ["serde"] }

[[example]]
name = "multi_recorder"
path = "examples/multi_recorder.rs"

[[example]]
name = "sync_validator"
path = "examples/sync_validator.rs"

[[example]]
name = "merge_hdf5"
path = "examples/merge_hdf5.rs"

[[example]]
name = "sync_multi_recorder"
path = "examples/sync_multi_recorder.rs"

[[example]]
name = "inspect_metadata"
path = "examples/inspect_metadata.rs"
