[package]
name = "lsl-recorder"
version = "0.1.0"
edition = "2021"

[dependencies]
lsl = {git = "https://github.com/labstreaminglayer/liblsl-rust.git", rev = "afa1d251674591c11ebc06070de60914b6dafccf"}
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
tempfile = "3.0"
ndarray = "0.16"
zarrs = { version = "0.22.7", features = ["filesystem", "blosc"] }
fastrand = "2.0"
fs2 = "0.4"
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.3"

[[bin]]
name = "lsl-merge"
path = "src/bin/lsl-merge.rs"

[[bin]]
name = "lsl-validate"
path = "src/bin/lsl-validate.rs"

[[bin]]
name = "lsl-inspect"
path = "src/bin/lsl-inspect.rs"

[[bin]]
name = "lsl-dummy-stream"
path = "src/bin/lsl-dummy-stream.rs"

[[bin]]
name = "lsl-multi-recorder"
path = "src/bin/lsl-multi-recorder.rs"

[[bin]]
name = "lsl-sync"
path = "src/bin/lsl-sync.rs"

[[example]]
name = "multi_recorder"
path = "examples/multi_recorder.rs"

[[example]]
name = "sync_multi_recorder"
path = "examples/sync_multi_recorder.rs"

[[example]]
name = "basic_recording_demo"
path = "examples/basic_recording_demo.rs"

[[example]]
name = "merge_workflow_demo"
path = "examples/merge_workflow_demo.rs"

[[example]]
name = "validation_demo"
path = "examples/validation_demo.rs"

[[example]]
name = "inspection_demo"
path = "examples/inspection_demo.rs"
