[package]
name = "lsl-recording-toolbox"
version = "1.5.0"
edition = "2024"
description = "Comprehensive toolkit for recording Lab Streaming Layer (LSL) data streams to Zarr format with multi-stream synchronization"
license = "GPL-3.0-or-later"
authors = ["Raul C. Sîmpetru"]
keywords = ["lsl", "zarr", "neuroscience", "data-acquisition", "recording"]
categories = ["science", "command-line-utilities"]
readme = "README.md"
repository = "https://github.com/RaulSimpetru/lsl-recording-toolbox"
homepage = "https://github.com/RaulSimpetru/lsl-recording-toolbox"

[dependencies]
lsl = {git = "https://github.com/labstreaminglayer/liblsl-rust.git", rev = "afa1d251674591c11ebc06070de60914b6dafccf"}
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = "0.37"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
tempfile = "3.0"
ndarray = "0.16"
zarrs = { version = "0.22.7", features = ["filesystem", "blosc"] }
fastrand = "2.0"
fs2 = "0.4"
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.3"

[[bin]]
name = "lsl-recorder"
path = "src/bin/lsl-recorder.rs"

[[bin]]
name = "lsl-validate"
path = "src/bin/lsl-validate.rs"

[[bin]]
name = "lsl-inspect"
path = "src/bin/lsl-inspect.rs"

[[bin]]
name = "lsl-dummy-stream"
path = "src/bin/lsl-dummy-stream.rs"

[[bin]]
name = "lsl-multi-recorder"
path = "src/bin/lsl-multi-recorder.rs"

[[bin]]
name = "lsl-sync"
path = "src/bin/lsl-sync.rs"
